[package]
name = "eureka"
version = "1.0.0"
description = "CLI tool to input and store your ideas without leaving the terminal"
authors = ["cius.ji <bajimaster@gmail.com>"]
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["cli", "terminal", "productivity", "git", "ideas"]
homepage = "git@github.com:ciusji/eureka.git"
repository = "git@github.com:ciusji/eureka.git"
readme = "README.md"
license = "MIT"
edition = "2018"

exclude = [
    "assets/*",
    "tests/*",
    "scripts/*",
]

[dependencies]
clap = "2.33.3"
dirs = "3.0.1"
git2 = "0.13.17"
termcolor = "1.1.2"
which = "4.0.2"
log = "0.4.14"
pretty_env_logger = "0.4.0"

[dev-dependencies]
atomic-counter = "1.0.1"
tempfile = "3.2.0"
